--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1,20 +1,20 @@
 * early-init.el
 ** Frame Size and Default Font
-I like to have a decently large window. I like the JetBrains Mono
-font.
+Fill the left half of the screen and set the font to Iosevka
 
 #+begin_src emacs-lisp :tangle "early-init.el"
-    (dolist (var '((left . 0.1)
-		   (top . 0.1)
-		   (width . 0.6)
-		   (height . 0.6)
-		   (font . "JetBrains Mono-16")))
-      (add-to-list 'default-frame-alist var))
+  (dolist (var '((left . 0)
+		 (top . 0)
+		 (fullscreen . fullheight)
+		 (width . 0.5)
+		 (font . "Iosevka-16")))
+    (add-to-list 'default-frame-alist var)
+    (add-to-list 'initial-frame-alist var))
 #+end_src
 
 ** Package config
 
-All my package info loaded. =use-package= automatically ensuring
+Use =use-package= and have it automatically ensure
 packages are installed.
 
 #+begin_src emacs-lisp :tangle "early-init.el"
@@ -29,7 +29,7 @@ packages are installed.
 
 * init.el
 ** macOS Modifier Keys
-On Macs, the =ns-*-modifier= commands allow for a nice way to put the
+On Macs, the =ns-*-modifier= commands allow for an easy way to put the
 control key under your thumbs, with meta nearby.
 
 #+begin_src emacs-lisp :tangle "init.el"
@@ -54,8 +54,7 @@ modeline when bell-worthy actions are attempted.
 #+end_src
 
 ** Remove the Help
-While I don't think new users should be advised to disable these
-options, I now find them more annoying than helpful.
+Remove the menu, scroll and tool bars.
 
 #+begin_src emacs-lisp :tangle "init.el"
   (setq inhibit-startup-screen t)
@@ -65,9 +64,10 @@ options, I now find them more annoying than helpful.
 #+end_src
 
 ** Logical Lines, Track End of Line
-I like =C-n= and =C-p= to move by logical lines, even if they are too long
-to fit the width of the window/frame. If I'm at the end of a line and
-move by line, I'd like to end up at the end of the destination line.
+Have =C-n= and =C-p= move by logical lines, even if they are too long to
+fit the width of the window/frame. When using these commands at the
+end of a line, have them track the end of the line rather than a
+specific column.
 
 #+begin_src emacs-lisp :tangle "init.el"
   (setq line-move-visual nil
@@ -75,9 +75,8 @@ move by line, I'd like to end up at the end of the destination line.
 #+end_src
 
 ** Line Numbers
-I like having relative line numbers. If I see a line I want to edit,
-relative line numbers allow me to jump there with an easy-to-find
-argument to =next-line= or =previous-line=.
+Relative line numbers allow me to easily jump to any visible line with
+an argument to =next-line= or =previous-line=.
 
 #+begin_src emacs-lisp :tangle "init.el"
   (global-display-line-numbers-mode)
@@ -85,8 +84,8 @@ argument to =next-line= or =previous-line=.
 #+end_src
 
 ** Cursor Highlighting and Styling
-I like a bar cursor. To make it easier to find, I like to have it
-always blink and to highlight the line it's on.
+Bar cursor. To make it easier to find, I like to have it always blink
+and to highlight the line it's on.
 
 #+begin_src emacs-lisp :tangle "init.el"
   (setq-default cursor-type 'bar)
@@ -105,8 +104,8 @@ annoyance.
 #+end_src
 
 ** Recent Files, Save Location
-I like having a list of recent files. I like keeping my place in files
-I have edited recently.
+=recentf= for easily opening recently edited files. Save my place in
+files.
 
 #+begin_src emacs-lisp :tangle "init.el"
     (use-package recentf
@@ -124,25 +123,17 @@ etc. Electric pair mode saves me the trouble of typing the closer.
 #+end_src
 
 ** Font and Ligatures
-I like the IBM Plex font. JebBrains Mono has support for ligatures (it
-was set as the default font in =early-init.el=)
+Iosevka Aile for variable pitch, ligatures in =prog-mode=
 
 #+begin_src emacs-lisp :tangle "init.el"
-  (set-face-font 'variable-pitch "IBM Plex Sans-16")
+  (set-face-font 'variable-pitch "Iosevka Aile-16")
 
   (use-package ligature
     :config
-    (ligature-set-ligatures 'prog-mode '("-|" "-~" "---" "-<<" "-<" "--" "->" "->>" "-->" "///" "/=" "/=="
-					 "/>" "//" "/*" "*>" "***" "*/" "<-" "<<-" "<=>" "<=" "<|" "<||"
-					 "<|||" "<|>" "<:" "<>" "<-<" "<<<" "<==" "<<=" "<=<" "<==>" "<-|"
-					 "<<" "<~>" "<=|" "<~~" "<~" "<$>" "<$" "<+>" "<+" "</>" "</" "<*"
-					 "<*>" "<->" "<!--" ":>" ":<" ":::" "::" ":?" ":?>" ":=" "::=" "=>>"
-					 "==>" "=/=" "=!=" "=>" "===" "=:=" "==" "!==" "!!" "!=" ">]" ">:"
-					 ">>-" ">>=" ">=>" ">>>" ">-" ">=" "&&&" "&&" "|||>" "||>" "|>" "|]"
-					 "|}" "|=>" "|->" "|=" "||-" "|-" "||=" "||" ".." ".?" ".=" ".-" "..<"
-					 "..." "+++" "+>" "++" "[||]" "[<" "[|" "{|" "??" "?." "?=" "?:" "##"
-					 "###" "####" "#[" "#{" "#=" "#!" "#:" "#_(" "#_" "#?" "#(" ";;" "_|_"
-					 "__" "~~" "~~>" "~>" "~-" "~@" "$>" "^=" "]#"))
+    (ligature-set-ligatures 'prog-mode '("<---" "<--"  "<<-" "<-" "->" "-->" "--->" "<->" "<-->" "<--->" "<---->" "<!--"
+                                       "<==" "<===" "<=" "=>" "=>>" "==>" "===>" ">=" "<=>" "<==>" "<===>" "<====>" "<!---"
+                                       "<~~" "<~" "~>" "~~>" "::" ":::" "==" "!=" "===" "!=="
+                                       ":=" ":-" ":+" "<*" "<*>" "*>" "<|" "<|>" "|>" "+:" "-:" "=:" "<******>" "++" "+++"))
 
     (global-ligature-mode t))
 #+end_src
@@ -156,14 +147,14 @@ The theme of the moment is: Dracula.
 	(load-theme 'dracula t nil))
 #+end_src
 
-I want =all-the-icons=:
+Icons
 
 #+begin_src emacs-lisp :tangle "init.el"
     (use-package all-the-icons
       :if (display-graphic-p))
 #+end_src
 
-I want icons in =dired=. I also want =dired= to hide details by default:
+Icons in =dired=. Have =dired= hide details by default:
 
 #+begin_src emacs-lisp :tangle "init.el"
   (use-package all-the-icons-dired
@@ -179,7 +170,7 @@ iBuffer? Yes please. iBuffer with icons? Very yes.
     :hook (ibuffer-mode . all-the-icons-ibuffer-mode))
 #+end_src
 
-Finally, I want the icons in my completions:
+Icons in my completions:
 
 #+begin_src emacs-lisp :tangle "init.el"
   (use-package all-the-icons-completion
@@ -232,8 +223,8 @@ strings with buffer name and position as a percentage.
 #+end_src
 
 ** Org Configuration
-I like hiding formatting markers (*, _, =, etc) and showing styled
-text instead. I also like starting up folded.
+Hide formatting markers (*, _, =, etc) and show styled text
+instead. Start up folded.
 #+begin_src emacs-lisp :tangle "init.el"
   (setq org-hide-emphasis-markers t)
   (setq org-startup-folded t)
@@ -246,4 +237,3 @@ Avoid confusion about where the Github token is stored.
   (use-package forge
     :after magit)
 #+end_src
-
